fix : fixed color contrast [123]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -694,7 +694,9 @@ span {
   width: 1px;
 }
 
+
 .ellipsis {
+  color: inherit;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
